--- a/css/loginstyles.css
+++ b/css/loginstyles.css
@@ -1,144 +1,45 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
-/* Resetting default styling and setting font-family */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Montserrat", sans-serif;
-}
-body {
-    width: 100%;
-    min-height: 100vh;
-    padding: 0 10px;
-    display: flex;
-    background: rgb(243,244,230);
-    background: linear-gradient(164deg, rgba(243,244,230,1) 50%, grey 100%);
-    justify-content: center;
-    align-items: center;
-}
-/* Login form styling */
-.login_form {
-    width: 100%;
-    max-width: 435px;
-    background: #fff;
-    border-radius: 6px;
-    padding: 41px 30px;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
-}
-.login_form h3 {
-    font-size: 20px;
-    text-align: center;
-}
-/* Google & Apple button styling */
-.login_form .login_option {
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-    align-items: center;
-}
-.login_form .login_option .option {
-    width: calc(100% / 2 - 12px);
-}
-.login_form .login_option .option a {
-    height: 56px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 12px;
-    background: #F8F8FB;
-    border: 1px solid #DADAF2;
-    border-radius: 5px;
-    margin: 34px 0 24px 0;
-    text-decoration: none;
-    color: #171645;
-    font-weight: 500;
-    transition: 0.2s ease;
-}
-.login_form .login_option .option a:hover {
-    background: #ededf5;
-    border-color:rgb(39,96,64);
-}
-.login_form .login_option .option a img {
-    max-width: 25px;
-}
-.login_form p {
-    text-align: center;
-    font-weight: 500;
-}
-.login_form .separator {
-    position: relative;
-    margin-bottom: 24px;
-}
-/* Login option separator styling */
-.login_form .separator span {
-    background: #fff;
-    z-index: 1;
-    padding: 0 10px;
-    position: relative;
-}
-.login_form .separator::after {
-    content: '';
-    position: absolute;
-    width: 100%;
-    top: 50%;
-    left: 0;
-    height: 1px;
-    background: #C2C2C2;
-    display: block;
-}
-form .input_box label {
-    display: block;
-    font-weight: 500;
-    margin-bottom: 8px;
-}
-/* Input field styling */
-form .input_box input {
-    width: 100%;
-    height: 57px;
-    border: 1px solid #DADAF2;
-    border-radius: 5px;
-    outline: none;
-    background: #F8F8FB;
-    font-size: 17px;
-    padding: 0px 20px;
-    margin-bottom: 25px;
-    transition: 0.2s ease;
-}
-form .input_box input:focus {
-    border-color:rgb(39,96,64);
-}
-form .input_box .password_title {
-    display: flex;
-    justify-content: space-between;
-    text-align: center;
-}
-form .input_box {
-    position: relative;
-}
-a {
-    text-decoration: none;
-    color:rgb(39,96,64);
-    font-weight: 500;
-}
-a:hover {
-    text-decoration: underline;
-}
-/* Login button styling */
-form button {
-    width: 100%;
-    height: 56px;
-    border-radius: 5px;
-    border: none;
-    outline: none;
-    background:rgb(39,170,64);
-    color: #fff;
-    font-size: 18px;
-    font-weight: 500;
-    text-transform: uppercase;
-    cursor: pointer;
-    margin-bottom: 28px;
-    transition: 0.3s ease;
-}
-form button:hover {
-    background: rgb(39,150,64);
-}
+
+body{
+    background-color:rgb(243,244,230) ;
+  }
+  nav{
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+      padding-block: 2rem 0;
+      padding-inline: 1rem;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 1rem;
+      background: rgba(255, 255, 255, 0.6);
+      backdrop-filter: blur(10px);
+      
+    }
+    
+    
+    .nav__links {
+      list-style: none;
+      display: flex;
+      align-items: center;
+      gap: 2rem;
+    }
+    
+    .nav__links a {
+      font-weight: 500;
+    }
+    
+    .nav__links .logo {
+      font-size: 1.2rem;
+      font-weight: 800;
+      font-family:'Beloved';
+    }
+    
+    .nav__left a {
+      color: grey;
+    }
+    
+    
+    .nav__links a:hover {
+      color:black;
+    }
