--- a/css/index.css
+++ b/css/index.css
@@ -1,13 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap");
 
 :root {
-  
-  
   --text-dark: grey;
   --white: #ffffff;
   --max-width: 1600px;
-  --background-color:rgb(243,244,230);
+  --backgroundcolor:rgb(243,244,230);
   --black:black;
+  --nav:rgba(255, 255, 255, 0.7);
+  
 }
 
 * {
@@ -34,19 +34,11 @@ a {
 }
 
 body {
-  font-family: "Noto Sans JP", sans-serif;
-  background-color:var(--background-color) ;
+    background-color:var(--backgroundcolor) !important;
+
 }
 
 
-@keyframes body-bg {
-  0% {
-    width: 0vw;
-  }
-  100% {
-    width: 50vw;
-  }
-}
 body::before {
   position: fixed;
   content: "0";
@@ -66,8 +58,17 @@ body::before {
   min-height: 100vh;
   max-width: var(--max-width);
   margin-inline: auto;
-  /* overflow: hidden; */
+  
 }
+
+@keyframes body-bg {
+    0% {
+      width: 0vw;
+    }
+    100% {
+      width: 50vw;
+    }
+  }
 .nav_head {
   position: sticky;
   top: 0;
@@ -77,7 +78,7 @@ body::before {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background: rgba(255, 255, 255, 0.7); /* More transparency */
+  background:var(--nav); /* More transparency */
   backdrop-filter: blur(15px); /* Increased blur */
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); /* Optional shadow */
 }
@@ -289,9 +290,3 @@ body::before {
   }
 }
 
-@media (width > 540px) {
-}
-@media (width > 768px) {
-}
-@media (width > 1024px) {
-}
